# zyntalic_schelling_trainer

./: .env.example  .gitignore  EMBEDDINGS.md  LICENSE  QUICK_FIX_GUIDE.md  README.md  check_status.py  kill_and_restart.py  package-lock.json  pyproject.toml  run_desktop.py  start_server.bat  test_api_connection.py  test_output_format.py  test_pdf_cleaning.py  test_translations.py
.github/workflows/: ci.yml
.venv-1/: pyvenv.cfg
.venv-1/Scripts/: activate  activate.bat
apps/cli/: __main__.py
apps/web/: app.py
data/cache/: translations.json.tmp
data/embeddings/: anchor_embeddings.json  sample_translations.json  statistics.json  vocabulary_mappings.json  word_cache.json
data/fixtures/: sample.jsonl
docker/: Dockerfile
evals/: test_smoke.py
scripts/: generate_embeddings.py
scripts/manual/: api_connection_demo.py  output_format_demo.py  pdf_cleaning_demo.py  translation_quickcheck.py
zyntalic/: __init__.py  advanced_features.py  cli.py  core.py  documentation.py  embeddings.py  enhanced_syntax.py  lexicon_manager.py  morphology.py  phonology.py  semantic_coherence.py  syntax.py  test_suite.py  transformers.py  translator.py
zyntalic-flow/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
zyntalic-flow/components/: SettingsBar.tsx
zyntalic-flow/public/: index.css
zyntalic-flow/services/: apiService.ts  geminiService.ts
zyntalic/utils/: cache.py  rng.py
zyntalic_docs/: README.md  culture.md  grammar.md  lexicon.md  morphology.md  phonology.md  quick_ref.md  semantics.md  syntax.md  tutorial.md
(+1 files in other folders)
